# philosophers

./: CMakeLists.txt  README.md  main.c  sauce.h  test_inputs.txt
includes/: sauce.h
srcs/: conditions.c  feast.c  main.c  parsing.c  philosopher_actions.c  utilities.c
